2002-02-26  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Update path to pre-inst-guile automake frag.

2002-02-21  Neil Jerram  <neil@ossau.uklinux.net>

	* stacks.c, stacks.h (scm_t_stackype): Renamed to scm_stack_type
	everywhere.

	* unif.c (scm_array_to_list): Correct name, which had been
	accidentally changed to scm_t_arrayo_list!

2002-02-11  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (bin_PROGRAMS): Move `guile_filter_doc_snarfage'
	to `noinst_PROGRAMS'.
	(bin_SCRIPTS): Move all values to `noinst_SCRIPTS'; delete.
	(noinst_PROGRAMS, noinst_SCRIPTS): New.

2002-02-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (AUTOMAKE_OPTIONS): Replace "foreign" with "gnu".

2002-02-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* gsubr.c (create_gsubr): On "too many args" error,
	also display arg count and name.  Thanks to Bill Schottstaedt.

2002-02-05  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Include $(top_srcdir)/pre-inst-guile.am.

	(bin_SCRIPTS): Remove guile-snarf-docs-texi.
	(alldotdocfiles, snarf2checkedtexi, dotdoc2texi): New vars.
	(guile.texi): Use $(dotdoc2texi).

	* guile-snarf-docs-texi.in: Bye bye.

2002-01-31  Marius Vollmer  <mvo@zagadka.ping.de>

	* symbols.c (scm_gensym): Use " g" as default prefix, not "g".
	This might help to make unintended clashes less likely.

2002-01-16  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: add stamp-h1.

2001-12-27  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* Makefile.am (guile-procedures.txt): Make it dependent on
	guile.texi, not guile-procedures.texi.

2001-12-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (guile-procedures.txt): When we don't have makeinfo,
	use "cp" instead.

2001-12-03  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (OMIT_DEPENDENCIES): Delete macro (obsolete
	mechanism).

2001-11-23  Marius Vollmer  <mvo@zagadka.ping.de>

	* modules.c (scm_c_use_module): Adapt to changes to
	`process-use-modules'.
